# programming_formalisms_project_summer_2023

./: .wordlist.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
feedback_to_students/: README.md
feedback_to_students/20230529/: feedback_testing.md
src/pfp2023_richelbilderbeek/: euler.py  euler_6.py  tdd.py  testing.py
tests/: __init__.py  test_euler.py  test_euler_6.py  test_tdd.py  test_tdd_questions.py  test_tdd_solutions.py  test_testing.py  test_testing_questions.py  test_testing_solutions.py
